--- a/Dish_Discovery/Views/Home/Index.cshtml
+++ b/Dish_Discovery/Views/Home/Index.cshtml
@@ -103,29 +103,29 @@
         <div class="slideshow-container">
             <div class="mySlides">
                 <div class="numbertext">1 / 5</div>
-                <img src="images/295_ROG Strix G15_G17 (2022) - Volt Green.png" style="width:100%">
+                <img src="images/281873.jpg" alt="image" style="width:100%">
                 <div class="text">Caption Text</div>
             </div>
             <div class="mySlides">
                 <div class="numbertext">2 / 5</div>
-                <img src="images/281873.jpg" style="width:100%">
+                <img src="images/281873.jpg" alt="image" style="width:100%">
                 <div class="text">Caption Text 2</div>
             </div>
 
             <div class="mySlides">
                 <div class="numbertext">3 / 5</div>
-                <img src="images/325_ROG-Prism.jpg" style="width:100%">
+                <img src="images/325_ROG-Prism.jpg" alt="image" style="width:100%">
                 <div class="text">Caption Text 3</div>
             </div>
 
             <div class="mySlides">
                 <div class="numbertext">4 / 5</div>
-                <img src="images/8-bit City_1920x1080.jpg" style="width:100%">
+                <img src="images/8-bit City_1920x1080.jpg" alt="image" style="width:100%">
                 <div class="text">Caption Text 4</div>
             </div>
             <div class="mySlides">
                 <div class="numbertext">5 / 5</div>
-                <img src="images/file.jpg" style="width:100%">
+                <img src="images/file.jpg" alt="image" style="width:100%">
                 <div class="text">Caption Text 5</div>
             </div>
             <!-- Add more slides here -->
