--- a/Dish_Discovery/Views/Home/Index.cshtml
+++ b/Dish_Discovery/Views/Home/Index.cshtml
@@ -97,7 +97,7 @@
 <body>
     <div class="text-center">
         <h1 class="madimi-one-regular welcome-paragraph">Welcome To Dish Discovery</h1>
-        <h4 class="madimi-one-regular welcome-paragraph">The best place to find your new best recipe</h4>
+        <h4 class="madimi-one-regular welcome-paragraph">The place to find your new best recipe</h4>
         <p class="madimi-one-regular welcome-paragraph">About Us : We are two teenagers with one week left to prapare our finale project</p>
 
         <div class="slideshow-container">
