--- a/Dish_Discovery/Views/Home/Index.cshtml
+++ b/Dish_Discovery/Views/Home/Index.cshtml
@@ -107,50 +107,54 @@
     <div class="text-center">
         <h1 class="madimi-one-regular welcome-paragraph">Welcome To Dish Discovery</h1>
         <h2 class="madimi-one-regular welcome-paragraph">The best place to find your new favorite recipe</h2>
-        <h4 class="madimi-one-regular welcome-paragraph">What the creators perefer</h4>
+        <h4 class="madimi-one-regular welcome-paragraph">What we already have</h4>
 
         <div class="slideshow-container">
             <div class="mySlides">
-                <div class="numbertext">1 / 8</div>
-                <img src="pictures/avocado.webp" alt="image" style="width:100%">
+                <div class="numbertext">1 / 9</div>
+                <img src="pictures/avocado (Small).jpeg" alt="image" style="width:100%">
                 <div class="text">Avocado Toast</div>
             </div>
             <div class="mySlides">
-                <div class="numbertext">2 / 8</div>
+                <div class="numbertext">2 / 9</div>
                 <img src="pictures/shrimp.webp" alt="image" style="width:100%">
                 <div class="text">Lemon Garlic Shrimp</div>
             </div>
 
             <div class="mySlides">
-                <div class="numbertext">3 / 8</div>
+                <div class="numbertext">3 / 9</div>
                 <img src="pictures/soup.webp" alt="image" style="width:100%">
                 <div class="text">Lentil Soup</div>
             </div>
 
             <div class="mySlides">
-                <div class="numbertext">4 / 8</div>
+                <div class="numbertext">4 / 9</div>
                 <img src="pictures/cookies.webp" alt="image" style="width:100%">
                 <div class="text">Chocolate Chip Cookies</div>
             </div>
             <div class="mySlides">
-                <div class="numbertext">5 / 8</div>
+                <div class="numbertext">5 / 9</div>
                 <img src="pictures/greek_salad.webp" alt="image" style="width:100%">
                 <div class="text">Greek Salad</div>
             </div>
             <div class="mySlides">
-                <div class="numbertext">6 / 8</div>
+                <div class="numbertext">6 / 9</div>
                 <img src="pictures/chips - Copy.webp" alt="image" style="width:100%">
                 <div class="text">Guacamole with Tortilla Chips</div>
             </div>
             <div class="mySlides">
-                <div class="numbertext">7 / 8</div>
+                <div class="numbertext">7 / 9</div>
                 <img src="pictures/chicken.webp" alt="image" style="width:100%">
                 <div class="text">Baked Lemon Herb Chicken</div>
             </div>
             <div class="mySlides">
-                <div class="numbertext">8 / 8</div>
+                <div class="numbertext">8 / 9</div>
                 <img src="pictures/spagheti.webp" alt="image" style="width:100%">
                 <div class="text">Spaghetti Carbonara</div>
+            </div>
+            <div class="mySlides">
+                <div class="numbertext">9 / 9</div>
+                <img src="pictures/Screenshot 2024-03-29 000221 (Small).png" alt="image" style="width:100%; max-height:667px;">
             </div>
             <!-- Add more slides here -->
             <!-- Next and previous buttons -->
@@ -168,6 +172,8 @@
             <span class="dot" onclick="currentSlide(6)"></span>
             <span class="dot" onclick="currentSlide(7)"></span>
             <span class="dot" onclick="currentSlide(8)"></span>
+            <span class="dot" onclick="currentSlide(9)"></span>
+
 
 
         </div>
