--- a/Dish_Discovery/Views/Recipes/Details.cshtml
+++ b/Dish_Discovery/Views/Recipes/Details.cshtml
@@ -44,6 +44,19 @@
             <dd class="col-sm-10">
                 @Html.DisplayFor(model => model.Name)
             </dd>
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.Products)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.Products)
+            </dd>
+
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.Description)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.Description)
+            </dd>
 
             <dt class="col-sm-2">
                 @Html.DisplayNameFor(model => model.Author.Nickname)
