--- a/Dish_Discovery/Views/Home/Index.cshtml
+++ b/Dish_Discovery/Views/Home/Index.cshtml
@@ -105,55 +105,82 @@
 </head>
 <body>
     <div class="text-center">
-        <h1 class="madimi-one-regular welcome-paragraph">Welcome To Dish Discovery</h1>
+        <h1 class="madimi-one-regular welcome-paragraph">Welcome To Dish Discovery™️</h1>
         <h2 class="madimi-one-regular welcome-paragraph">The best place to find your new favorite recipe</h2>
         <h4 class="madimi-one-regular welcome-paragraph">What we already have</h4>
 
         <div class="slideshow-container">
             <div class="mySlides">
-                <div class="numbertext">1 / 9</div>
+                <div class="numbertext">1 / 8</div>
                 <img src="pictures/avocado (Small).jpeg" alt="image" style="width:100%">
-                <div class="text">Avocado Toast</div>
+                <div class="text">
+                    <a href="https://localhost:7106/recipes/details?id=5ed39b0a-cf73-4425-8f31-2cf799f98097">Avocado Toast</a>
+                </div>
             </div>
             <div class="mySlides">
-                <div class="numbertext">2 / 9</div>
+                <div class="numbertext">2 / 8</div>
                 <img src="pictures/shrimp.webp" alt="image" style="width:100%">
-                <div class="text">Lemon Garlic Shrimp</div>
+                <div class="text">
+                    <a href="https://localhost:7106/recipes/details?id=365b7199-d324-41a2-aaa0-1f90c294c3de">
+                        Lemon Garlic Shrimp
+                    </a>
+                </div>
             </div>
 
             <div class="mySlides">
-                <div class="numbertext">3 / 9</div>
+                <div class="numbertext">3 / 8</div>
                 <img src="pictures/soup.webp" alt="image" style="width:100%">
-                <div class="text">Lentil Soup</div>
+                <div class="text">
+                    <a href="https://localhost:7106/recipes/details?id=76a03bc8-e39d-41d9-8925-5942d0579b25">Lentil Soup</a>
+                </div>
             </div>
 
             <div class="mySlides">
-                <div class="numbertext">4 / 9</div>
+                <div class="numbertext">4 / 8</div>
                 <img src="pictures/cookies.webp" alt="image" style="width:100%">
-                <div class="text">Chocolate Chip Cookies</div>
+                <div class="text">
+                    <a href="https://localhost:7106/recipes/details?id=f85fdd89-3b18-4ada-83bc-b5e2dd09c466">
+                        Chocolate Chip Cookies
+                    </a>
+                </div>
             </div>
             <div class="mySlides">
-                <div class="numbertext">5 / 9</div>
+                <div class="numbertext">5 / 8</div>
                 <img src="pictures/greek_salad.webp" alt="image" style="width:100%">
-                <div class="text">Greek Salad</div>
+                <div class="text">
+                    <a href="https://localhost:7106/recipes/details?id=438bd3e4-1730-4598-bc7b-93b867821808">
+                        Greek Salad
+                    </a>
+                </div>
             </div>
             <div class="mySlides">
-                <div class="numbertext">6 / 9</div>
+                <div class="numbertext">6 / 8</div>
                 <img src="pictures/chips - Copy.webp" alt="image" style="width:100%">
-                <div class="text">Guacamole with Tortilla Chips</div>
+                <div class="text">
+                    <a href="https://localhost:7106/recipes/details?id=0b4df98f-3a78-4e3f-9604-d5dc2792c0d5">
+                        Guacamole with Tortilla Chips
+                    </a>
+                </div>
             </div>
             <div class="mySlides">
-                <div class="numbertext">7 / 9</div>
+                <div class="numbertext">7 / 8</div>
                 <img src="pictures/chicken.webp" alt="image" style="width:100%">
-                <div class="text">Baked Lemon Herb Chicken</div>
+                <div class="text">
+                    <a href="https://localhost:7106/recipes/details?id=1d23dc09-46a6-408d-8d88-fd2a561ed91a">
+                        Baked Lemon Herb Chicken
+                    </a>
+                </div>
             </div>
             <div class="mySlides">
-                <div class="numbertext">8 / 9</div>
+                <div class="numbertext">8 / 8</div>
                 <img src="pictures/spagheti.webp" alt="image" style="width:100%">
-                <div class="text">Spaghetti Carbonara</div>
+                <div class="text">
+                    <a href="https://localhost:7106/recipes/details?id=e04ab829-5b50-4398-a654-db10e8c6a787">
+                        Spaghetti Carbonara
+                    </a>
+                </div>
             </div>
             <div class="mySlides">
-                <div class="numbertext">9 / 9</div>
                 <img src="pictures/Screenshot 2024-03-29 000221 (Small).png" alt="image" style="width:100%; max-height:667px;">
             </div>
             <!-- Add more slides here -->
@@ -179,8 +206,9 @@
         </div>
         <h1 class="madimi-one-regular welcome-paragraph">About us and the project</h1>
         <p style="font-size: 20px;">
-            We're building a simple cooking website using ASP.NET Core and a database. Our focus is on usability, not perfection. While our recipes might not be perfect, they're tried and true. We aim to create a friendly space for food lovers to explore and enjoy cooking. Our goal is to make cooking easier for everyone, with a user-friendly website that anyone can use to cook up tasty dishes at home.
+            We're building a simple cooking website using ASP.NET Core and a database. Our focus is on usability, not perfection. While our recipes might not be perfect, they're tried and true. We aim to create a friendly space for food lovers to explore and enjoy cooking. Our goal is to make cooking easier for everyone, with a user-friendly website that anyone can use to cook up tasty dishes at home. You can find more information about the project in our official <a href="https://github.com/Food-Discovery/Food_Discovery/tree/main" target="_blank">GitHub organization</a>.
         </p>
+
 
 
     </div>
