--- a/Dish_Discovery/Views/Recipes/Create.cshtml
+++ b/Dish_Discovery/Views/Recipes/Create.cshtml
@@ -40,14 +40,29 @@
                     <span asp-validation-for="InputModel!.Name" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <label asp-for="InputModel!.Products" class="control-label"></label>
-                    <input asp-for="InputModel!.Products" class="form-control" />
-                    <span asp-validation-for="InputModel!.Products" class="text-danger"></span>
+                    <label asp-for="InputModel!.Ingredients" class="control-label"></label>
+                    <input asp-for="InputModel!.Ingredients" class="form-control" />
+                    <span asp-validation-for="InputModel!.Ingredients" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <label asp-for="InputModel!.Description" class="control-label"></label>
-                    <input asp-for="InputModel!.Description" class="form-control" />
-                    <span asp-validation-for="InputModel!.Description" class="text-danger"></span>
+                    <label asp-for="InputModel!.Instruction" class="control-label"></label>
+                    <input asp-for="InputModel!.Instruction" class="form-control" />
+                    <span asp-validation-for="InputModel!.Instruction" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="InputModel!.Time" class="control-label"></label>
+                    <input asp-for="InputModel!.Time" class="form-control" />
+                    <span asp-validation-for="InputModel!.Time" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="InputModel!.Servings" class="control-label"></label>
+                    <input asp-for="InputModel!.Servings" class="form-control" />
+                    <span asp-validation-for="InputModel!.Servings" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="InputModel!.Calories" class="control-label"></label>
+                    <input asp-for="InputModel!.Calories" class="form-control" />
+                    <span asp-validation-for="InputModel!.Calories" class="text-danger"></span>
                 </div>
                 <div class="form-group">
                     <label asp-for="InputModel!.Author" class="control-label"></label>
