--- a/Dish_Discovery/Views/Types/Edit.cshtml
+++ b/Dish_Discovery/Views/Types/Edit.cshtml
@@ -24,7 +24,7 @@
     </style>
 </head>
 <body>
-    <h1>Edit</h1>
+    <h1>Edit <span style="color: orange;">🛠️</span></h1>
 
     <h4>Type</h4>
     <hr />
