--- a/Dish_Discovery/Views/Types/Index.cshtml
+++ b/Dish_Discovery/Views/Types/Index.cshtml
@@ -24,22 +24,26 @@
     </style>
 </head>
 <body>
-    <h1>Types</h1>
+    <h1 style="display: inline;">Types</h1>
+    <span style="color: orange; display: inline;">🌇🌆🌃</span>
 
     <p>
-        <a asp-action="Create">Create New</a>
+        <a asp-action="Create">Create New </a>  <span style ="color: orange;">➕</span>
     </p>
     <table class="table">
         <thead>
             <tr>
                 <th>
-                    @Html.DisplayNameFor(model => model.Name)
+                    @Html.DisplayNameFor(model => model.Name) <span style="color: orange;">📜</span>
                 </th>
                 <th>
-                    @Html.DisplayNameFor(model => model.AuthorsCount)
+                    @Html.DisplayNameFor(model => model.AuthorsCount) <span style="color: orange;">🗃️</span>
                 </th>
                 <th>
-                    @Html.DisplayNameFor(model => model.RecipesCount)
+                    @Html.DisplayNameFor(model => model.RecipesCount) <span style="color: orange;">🗃️</span>
+                </th>
+                <th>
+                    Actions <span style="color: orange;">⚡</span>
                 </th>
                 <th></th>
             </tr>
