--- a/Dish_Discovery/Views/Recipes/Details.cshtml
+++ b/Dish_Discovery/Views/Recipes/Details.cshtml
@@ -25,7 +25,7 @@
     </style>
 </head>
 <body>
-    <h1>Details</h1>
+    <h1>Details <span style="color: orange;">📄</span></h1>
 
     <div>
         <h4>Recipe</h4>
@@ -45,17 +45,36 @@
                 @Html.DisplayFor(model => model.Name)
             </dd>
             <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.Products)
+                @Html.DisplayNameFor(model => model.Ingredients)
             </dt>
             <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.Products)
+                @Html.DisplayFor(model => model.Ingredients)
             </dd>
 
             <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.Description)
+                @Html.DisplayNameFor(model => model.Instruction)
             </dt>
             <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.Description)
+                @Html.DisplayFor(model => model.Instruction)
+            </dd>
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.Time)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.Time)
+            </dd>
+
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.Servings)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.Servings)
+            </dd>
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.Calories)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.Calories)
             </dd>
 
             <dt class="col-sm-2">
