--- a/Dish_Discovery/Views/Types/Delete.cshtml
+++ b/Dish_Discovery/Views/Types/Delete.cshtml
@@ -30,7 +30,7 @@
     </style>
 </head>
 <body>
-    <h1>Delete</h1>
+    <h1>Delete <span style="color: orange;">🗑️</span></h1>
 
     <h3>Are you sure you want to delete this type?</h3>
     <div>
