--- a/Dish_Discovery/Views/Home/Privacy.cshtml
+++ b/Dish_Discovery/Views/Home/Privacy.cshtml
@@ -1,4 +1,7 @@
-﻿<!DOCTYPE html>
+﻿@{
+    ViewData["Title"] = "Privacy";
+}
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -18,18 +21,22 @@
         }
 
         h1 {
-            color: #fff; /* Adjust heading color as needed */
+            color: dodgerblue; /* Change title color to black */
+            text-align : center;
         }
 
         p {
-            color: #000; /* Set text color to black */
-            background-color: rgba(255, 255, 255, 0.8); /* Adjust background color and opacity as needed */
+            color: #000;
+            background-color: rgba(255, 255, 255, 0.8);
             padding: 20px;
             border-radius: 5px;
+            text-align: center;
+            border: 3px solid black;
+            padding: 0px;
         }
 
         strong {
-            color: #0056b3; /* Adjust strong text color as needed */
+            color: #0056b3;
         }
     </style>
 </head>
@@ -63,7 +70,7 @@
         - Food Discovery<br>
         - Shumen,Bulgaria<br>
         - Shumen,9705<br>
-        - alexvenmil@gmail.com and vankata384@gmail.com<br>
+        - alexvenmil@gmail.com<br>
         - 0893333084<br>
     </p>
 </body>
