--- a/Dish_Discovery/Views/Home/Index.cshtml
+++ b/Dish_Discovery/Views/Home/Index.cshtml
@@ -110,78 +110,83 @@
         <h4 class="madimi-one-regular welcome-paragraph">What we already have</h4>
 
         <div class="slideshow-container">
-            <div class="mySlides">
+            <div class="mySlides" style="border: 3px solid black; padding: 0px;">
                 <div class="numbertext">1 / 8</div>
                 <img src="pictures/avocado (Small).jpeg" alt="image" style="width:100%">
                 <div class="text">
-                    <a href="https://localhost:7106/recipes/details?id=5ed39b0a-cf73-4425-8f31-2cf799f98097">Avocado Toast</a>
+                    <a href="https://localhost:7106/recipes/details?id=5ed39b0a-cf73-4425-8f31-2cf799f98097" style="text-decoration: none; color: inherit;">Avocado Toast</a>
                 </div>
             </div>
-            <div class="mySlides">
+            <div class="mySlides" style="border: 3px solid black; padding: 0px;">
                 <div class="numbertext">2 / 8</div>
                 <img src="pictures/shrimp.webp" alt="image" style="width:100%">
                 <div class="text">
-                    <a href="https://localhost:7106/recipes/details?id=365b7199-d324-41a2-aaa0-1f90c294c3de">
+                    <a href="https://localhost:7106/recipes/details?id=365b7199-d324-41a2-aaa0-1f90c294c3de" style="text-decoration: none; color: inherit;">
                         Lemon Garlic Shrimp
                     </a>
                 </div>
             </div>
 
-            <div class="mySlides">
+            <div class="mySlides" style="border: 3px solid black; padding: 0px;">
                 <div class="numbertext">3 / 8</div>
                 <img src="pictures/soup.webp" alt="image" style="width:100%">
                 <div class="text">
-                    <a href="https://localhost:7106/recipes/details?id=76a03bc8-e39d-41d9-8925-5942d0579b25">Lentil Soup</a>
+                    <a href="https://localhost:7106/recipes/details?id=76a03bc8-e39d-41d9-8925-5942d0579b25" style="text-decoration: none; color: inherit;">Lentil Soup</a>
                 </div>
             </div>
 
-            <div class="mySlides">
+            <div class="mySlides" style="border: 3px solid black; padding: 0px;">
                 <div class="numbertext">4 / 8</div>
                 <img src="pictures/cookies.webp" alt="image" style="width:100%">
                 <div class="text">
-                    <a href="https://localhost:7106/recipes/details?id=f85fdd89-3b18-4ada-83bc-b5e2dd09c466">
+                    <a href="https://localhost:7106/recipes/details?id=f85fdd89-3b18-4ada-83bc-b5e2dd09c466" style="text-decoration: none; color: inherit;">
                         Chocolate Chip Cookies
                     </a>
                 </div>
             </div>
-            <div class="mySlides">
+            <div class="mySlides" style="border: 3px solid black; padding: 0px;">
                 <div class="numbertext">5 / 8</div>
                 <img src="pictures/greek_salad.webp" alt="image" style="width:100%">
                 <div class="text">
-                    <a href="https://localhost:7106/recipes/details?id=438bd3e4-1730-4598-bc7b-93b867821808">
+                    <a href="https://localhost:7106/recipes/details?id=438bd3e4-1730-4598-bc7b-93b867821808" style="text-decoration: none; color: inherit;">
                         Greek Salad
                     </a>
                 </div>
             </div>
-            <div class="mySlides">
+            <div class="mySlides" style="border: 3px solid black; padding: 0px;">
                 <div class="numbertext">6 / 8</div>
                 <img src="pictures/chips - Copy.webp" alt="image" style="width:100%">
                 <div class="text">
-                    <a href="https://localhost:7106/recipes/details?id=0b4df98f-3a78-4e3f-9604-d5dc2792c0d5">
+                    <a href="https://localhost:7106/recipes/details?id=0b4df98f-3a78-4e3f-9604-d5dc2792c0d5" style="text-decoration: none; color: inherit;">
                         Guacamole with Tortilla Chips
                     </a>
                 </div>
             </div>
-            <div class="mySlides">
+            <div class="mySlides" style="border: 3px solid black; padding: 0px;">
                 <div class="numbertext">7 / 8</div>
                 <img src="pictures/chicken.webp" alt="image" style="width:100%">
                 <div class="text">
-                    <a href="https://localhost:7106/recipes/details?id=1d23dc09-46a6-408d-8d88-fd2a561ed91a">
+                    <a href="https://localhost:7106/recipes/details?id=1d23dc09-46a6-408d-8d88-fd2a561ed91a" style="text-decoration: none; color: inherit;">
                         Baked Lemon Herb Chicken
                     </a>
                 </div>
             </div>
-            <div class="mySlides">
+            <div class="mySlides" style="border: 3px solid black; padding: 0px;">
                 <div class="numbertext">8 / 8</div>
                 <img src="pictures/spagheti.webp" alt="image" style="width:100%">
                 <div class="text">
-                    <a href="https://localhost:7106/recipes/details?id=e04ab829-5b50-4398-a654-db10e8c6a787">
+                    <a href="https://localhost:7106/recipes/details?id=e04ab829-5b50-4398-a654-db10e8c6a787" style="text-decoration: none; color: inherit;">
                         Spaghetti Carbonara
                     </a>
                 </div>
             </div>
             <div class="mySlides">
                 <img src="pictures/Screenshot 2024-03-29 000221 (Small).png" alt="image" style="width:100%; max-height:667px;">
+                <div class="text" style="font-size: 83px;  color: #00A2E8;">
+                    <a href="https://localhost:7106/recipes/create" style="text-decoration: none; color: inherit;">
+                        Click Here
+                    </a>
+                </div>
             </div>
             <!-- Add more slides here -->
             <!-- Next and previous buttons -->
