--- a/Dish_Discovery/Views/Types/Details.cshtml
+++ b/Dish_Discovery/Views/Types/Details.cshtml
@@ -31,28 +31,28 @@
             <hr />
             <dl class="row">
                 <dt class="col-sm-2">
-                    @Html.DisplayNameFor(model => model.Id)
+                @Html.DisplayNameFor(model => model.Id) <span style="color: orange;">💳</span>
                 </dt>
                 <dd class="col-sm-10">
                     @Html.DisplayFor(model => model.Id)
                 </dd>
 
                 <dt class="col-sm-2">
-                    @Html.DisplayNameFor(model => model.Name)
+                @Html.DisplayNameFor(model => model.Name) <span style="color: orange;">🍽️</span>
                 </dt>
                 <dd class="col-sm-10">
                     @Html.DisplayFor(model => model.Name)
                 </dd>
 
                 <dt class="col-sm-2">
-                    @Html.DisplayNameFor(model => model.AuthorsCount)
+                @Html.DisplayNameFor(model => model.AuthorsCount) <span style="color: orange;">🧑🏻‍🍳</span>
                 </dt>
                 <dd class="col-sm-10">
                     @Html.DisplayFor(model => model.AuthorsCount)
                 </dd>
 
                 <dt class="col-sm-2">
-                    @Html.DisplayNameFor(model => model.RecipesCount)
+                @Html.DisplayNameFor(model => model.RecipesCount) <span style="color: orange;">🍴</span>
                 </dt>
                 <dd class="col-sm-10">
                     @Html.DisplayFor(model => model.RecipesCount)
